# unread-pocket-to-omnivore

./: main.py  pyproject.toml
.github/workflows/: static.yml
